Fix align in case of text with icon (#31353).
git-svn-id: https://svn.redmine.org/redmine/trunk@24806 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/dropdown.css
+++ b/app/assets/stylesheets/dropdown.css
@@ -36,7 +36,7 @@
 }
 
 .dropdown-content li a, .dropdown-content .dropdown-items a {
-  display: block;
+  display: flex;
   padding-block: 8px;
   padding-inline: 16px;
   font-weight: normal;
